ch7/ch7-better-errors/panic-to-result-usage/tests/fails/create_person_with_result.stderr
error: this macro can only be applied to a function that does not return a Result. Signature: Result < Person, String >
  --> tests/fails/create_person_with_result.rs:10:1
   |
10 | fn create_person_with_result(name: String, age: u32) -> Result<Person, String> {
   | ^^
